add quizzes ts files and update types (#229)
* add quizzes ts files and update types

* expose all types (#230)

* expose all types

* expose all types

* add quizzes types tests

* formatting and passing tests

* add linting for declaration files

* add idOptions type

* lint test ts files

* update types

* Update parser version to avoid dependency vulnerability.

Co-authored-by: Steve Blaurock <sblaurock@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "sudo rm -rf node_modules package-lock.json",
     "version": "chmod +x ./scripts/verify-node-version.sh && ./scripts/verify-node-version.sh && npm run docs && git add ./docs/* && npm run bundle && git add -A ./dist",
     "check-lisc": "license-checker --production --onlyAllow 'Apache-2.0;BSD-3-Clause;MIT'",
-    "lint": "eslint 'src/**/*.js' 'spec/**/*.js'",
+    "lint": "eslint 'src/**/*.js' 'spec/**/*.js' 'src/**/*.d.ts'",
     "test": "npm run compile && mkdir -p test && cp -rf lib/* test && mocha ./spec/*",
     "test:types": "tsd .",
     "test:parallel": "npm run compile && mkdir -p test && cp -rf lib/* test && mocha --parallel ./spec/*",
@@ -47,6 +47,9 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/register": "^7.15.3",
     "@cspell/eslint-plugin": "^6.8.2",
+    "@types/events": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^8.6.0",
